--- a/MYTDotNetCore.ConsoleApp/MYTDotNetCore.ConsoleApp.csproj
+++ b/MYTDotNetCore.ConsoleApp/MYTDotNetCore.ConsoleApp.csproj
@@ -11,4 +11,8 @@
     <Compile Include="Documents\Readme.md" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
 </Project>
