--- a/MYTDotNetCore.RestAPI/MYTDotNetCore.RestAPI.csproj
+++ b/MYTDotNetCore.RestAPI/MYTDotNetCore.RestAPI.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MYTDotNetCore.Database\MYTDotNetCore.Database.csproj" />
+  </ItemGroup>
+
 </Project>
