--- a/MYTDotNetCore.ConsoleApp/MYTDotNetCore.ConsoleApp.csproj
+++ b/MYTDotNetCore.ConsoleApp/MYTDotNetCore.ConsoleApp.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MYTDotNetCore.Shared\MYTDotNetCore.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
