feat : Blog Domain Service for CRUD Blog

--- a/MYTDotNetCore.MinimalApi/MYTDotNetCore.MinimalApi.csproj
+++ b/MYTDotNetCore.MinimalApi/MYTDotNetCore.MinimalApi.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MYTDotNetCore.Database\MYTDotNetCore.Database.csproj" />
+    <ProjectReference Include="..\MYTDotNetCore.Domain\MYTDotNetCore.Domain.csproj" />
   </ItemGroup>
 
 </Project>
