--- a/MYTDotNetCore.ConsoleApp3/MYTDotNetCore.ConsoleApp3.csproj
+++ b/MYTDotNetCore.ConsoleApp3/MYTDotNetCore.ConsoleApp3.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="RestSharp" Version="112.1.1-alpha.0.4" />
     </ItemGroup>
 
 </Project>
